0025675: Visualization - Fix problems and inefficiencies with frustum culling

Removed unnecessary overlap check in traverse of layer items;
Slight optimization of calculations in overlap detection methods in OpenGl_BVHTreeSelector.